--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -69,8 +69,8 @@
 	<span class='shadow-up'></span>
 </div>
 <span class='main-content-shadow'></span>
-<!-- 
-<style is:inline amp-custom>
+
+<style>
 	span {
 		margin: 0;
 		padding: 0;
