--- a/src/components/Search.astro
+++ b/src/components/Search.astro
@@ -132,7 +132,7 @@ import SearchIcon from '@/components/icons/SearchIcon'
 	customElements.define('site-search', SiteSearch)
 </script>
 
-<style is:inline>
+<style>
 	.dark {
 		--pagefind-ui-primary: #eeeeee;
 		--pagefind-ui-text: #eeeeee;
