--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -1,21 +1,21 @@
 ---
 import { Picture } from 'astro:assets'
-import BaseLayout from '@/layouts/BaseLayout'
-// const renderroom = import('../../assets/images/portfolio/the-render-room.jpg')
-import renderroom from '@/assets/images/portfolio/the-render-room.jpg'
-// (await import('../../assets/images/portfolio/the-render-room.jpg')).default
-import green from '@/assets/images/portfolio/the-green-house.jpg'
-// (await import('@/assets/images/portfolio/the-green-house.jpg')).default
-import auret from '@/assets/images/portfolio/olivari-auret.jpg'
 // (await import('@/assets/images/portfolio/olivari-auret.jpg')).default
 import angela from '@/assets/images/portfolio/angela-jeweller.jpg'
+//  (await import('@/assets/images/portfolio/mecer-express.jpg')).default
+import dvmakeup from '@/assets/images/portfolio/dvmakeup.jpg'
 // (await import('@/assets/images/portfolio/angela-jeweller.jpg')).default
 import freedom from '@/assets/images/portfolio/freedom-hill-restaurant.jpg'
 import mercer from '@/assets/images/portfolio/mecer-express.jpg'
-//  (await import('@/assets/images/portfolio/mecer-express.jpg')).default
-import dvmakeup from '@/assets/images/portfolio/dvmakeup.jpg'
+// (await import('@/assets/images/portfolio/the-green-house.jpg')).default
+import auret from '@/assets/images/portfolio/olivari-auret.jpg'
 import pxsecurity from '@/assets/images/portfolio/pxsecurity.jpg'
 import simapro from '@/assets/images/portfolio/simapro.jpg'
+// (await import('../../assets/images/portfolio/the-render-room.jpg')).default
+import green from '@/assets/images/portfolio/the-green-house.jpg'
+// const renderroom = import('../../assets/images/portfolio/the-render-room.jpg')
+import renderroom from '@/assets/images/portfolio/the-render-room.jpg'
+import BaseLayout from '@/layouts/BaseLayout'
 ---
 
 <BaseLayout title='Work'>
@@ -281,7 +281,7 @@ import simapro from '@/assets/images/portfolio/simapro.jpg'
 	}, 5000)
 </script>
 
-<style is:inline>
+<style>
 	div,
 	span,
 	h2,
