--- a/src/pages/copyright.astro
+++ b/src/pages/copyright.astro
@@ -187,7 +187,7 @@ import BaseLayout from '@/layouts/BaseLayout'
 		<p></p>
 	</div>
 </BaseLayout>
-<style is:inline>
+<style>
 	/*! CSS Used from: https://gregbenner-classic-2009.netlify.app/stylesheets/mini.min.css */
 	/*! @import https://gregbenner-classic-2009.netlify.app/stylesheets/base.css */
 	div,
