--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -124,7 +124,7 @@ const atomFeed = '/atom.xml'
 	crossorigin='anonymous'></script> -->
 
 <style is:global>
-	@import url('/styles/global.css');
+	@import url('./styles/global.css');
 </style>
 
 <AstroFont
