--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -10,6 +10,8 @@ import WebMention from '@/components/WebMentions'
 import BaseLayout from '@/layouts/BaseLayout'
 import type { MarkdownHeading } from 'astro'
 import { siteConfig } from '../data/site.config'
+import authorImg from '../assets/images/greg.jpeg'
+
 const pageUrl = new URL(Astro.url.pathname, Astro.site)
 
 const username = 'jswhisperer'
@@ -28,8 +30,6 @@ type Props = {
 const { data, readTime, headings, id, slug, blskyid, body } = Astro.props
 const { title, description, pubDate, heroImage = { src: 'x' }, tags, author, category } = data
 const heroImageSrc = heroImage.src ?? '/public/open-graph.png'
-
-import gregImg from '@/assets/images/greg.jpeg'
 
 const heroImageJPG =
 	'https://media2.dev.to/dynamic/image/width=1000,height=420,fit=cover,gravity=auto,format=auto/https%3A%2F%2Fdev-to-uploads.s3.amazonaws.com%2Fuploads%2Farticles%2F0f0arenmyx88zjd8tvtz.jpg'
@@ -129,10 +129,8 @@ const articleDate = pubDate.toISOString()
 									))
 								}
 								<Picture
-									width={gregImg.width}
-									height={gregImg.height}
 									class='u-photo'
-									src={gregImg}
+									src={authorImg}
 									alt='Gregory Benner'
 									style='display:none;'
 								/>
