--- a/src/pages/author/[...author].astro
+++ b/src/pages/author/[...author].astro
@@ -2,7 +2,7 @@
 import BaseLayout from '@/layouts/BaseLayout'
 import { Picture } from 'astro:assets'
 import { getCollection, type CollectionEntry } from 'astro:content'
-
+import author from '../assets/images/greg.jpeg'
 const authors = await getCollection('author')
 
 export async function getStaticPaths() {
@@ -34,8 +34,8 @@ const { author } = Astro.props
 			<h1 itemprop='name'>{author.data.name}</h1>
 			<p>{author.data.bio}</p>
 			<p itemprop='url'>{author.data.url}</p>
-			<p>{author.data.avatar.src}</p>
-			<Picture alt='x' src={author.data.avatar} decoding='async' />
+
+			<Picture alt='x' src={authorphoto} decoding='async' />
 		</div>
 	</div>
 </BaseLayout>
