--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import ListPosts from '@/components/ListPosts'
 import BaseLayout from '@/layouts/BaseLayout'
 import { Picture } from 'astro:assets'
 import { getCollection } from 'astro:content'
-import gregImg from '../assets/images/greg.jpeg'
+import authorImg from '../assets/images/greg.jpeg'
 
 const MAX_POSTS = 1005 // max number of posts to show on the home page
 const allPosts = await getCollection('blog')
@@ -17,14 +17,7 @@ const posts = allPosts.slice(0, MAX_POSTS)
 		<a rel='author' class='p-name u-url' href=`https://jswhisperer.uk/author/greg`>Gregory Benner</a
 		>
 
-		<Picture
-			formats={['avif', 'webp']}
-			class='u-photo'
-			src={gregImg}
-			width={gregImg.width}
-			height={gregImg.height}
-			alt='Gregory Benner'
-		/>
+		<Picture formats={['avif', 'webp']} class='u-photo' src={authorImg} alt='Gregory Benner' />
 		<a class='p-org h-card' href='https://jswhisperer.uk/'>jswhisperer</a>
 	</div>
 
