--- a/src/pages/author/[...author].astro
+++ b/src/pages/author/[...author].astro
@@ -2,7 +2,7 @@
 import BaseLayout from '@/layouts/BaseLayout'
 import { Picture } from 'astro:assets'
 import { getCollection, type CollectionEntry } from 'astro:content'
-import author from '../assets/images/greg.jpeg'
+import authorphoto from '../../assets/images/greg.jpeg'
 const authors = await getCollection('author')
 
 export async function getStaticPaths() {
