--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,10 +8,15 @@ import authorImg from '../assets/images/greg.jpeg'
 
 const MAX_POSTS = 1005 // max number of posts to show on the home page
 const allPosts = await getCollection('blog')
-const posts = allPosts.slice(0, MAX_POSTS)
-const sorted = posts.sort(
-	(post1, post2) => new Date(post2.data.pubDate) - new Date(post1.data.pubDate)
-)
+const posts = allPosts
+	.slice(0, MAX_POSTS)
+	.sort(
+		({ data: { pubDate: pubDate1 } }, { data: { pubDate: pubDate2 } }) =>
+			new Date(pubDate2) - new Date(pubDate1)
+	)
+// const sorted = posts.sort(
+// 	({data : {pubDate: pubDate1}}, {data : {pubDate: pubDate2}}) => new Date(pubDate2) - new Date(pubDate1)
+// )
 ---
 
 <BaseLayout title='Home'>
@@ -26,6 +31,6 @@ const sorted = posts.sort(
 
 	<div class='h-feed'>
 		<h2 class=''>Latest Posts</h2>
-		<ListPosts FirstBig={false} posts={sorted} />
+		<ListPosts FirstBig={true} posts={posts} />
 	</div>
 </BaseLayout>
