--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -84,7 +84,7 @@ let bgImg = await getImage({ src: heroImage, formats: ["webp", "avif"] });
             width={600}
             height={400}
             class="heroImgBg object-cover w-full h-full rounded-t-lg"
-            loading="lazy"
+            loading="eager"
           />
         )
       }
