--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -75,7 +75,7 @@
 </div>
 <span class="main-content-shadow"></span>
 
-<style>
+<style onload="this.media='all'">
   span {
     margin: 0;
     padding: 0;
