--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -144,7 +144,7 @@ let bgImg = await getImage({ src: heroImage, formats: ["webp", "avif"] });
     </footer>
   </div>
 </article>
-<style>
+<style onload="this.media='all'">
   .heroImgBg {
     height: 100%;
     width: auto;
