--- a/src/components/WebMentions.astro
+++ b/src/components/WebMentions.astro
@@ -205,7 +205,7 @@ const showDate = (webmention: string | number | Date) =>
     </>
   ) : null
 }
-<style>
+<style onload="this.media='all'">
   .avatar {
     width: 50px;
 
