--- a/src/components/LinkUnderline.astro
+++ b/src/components/LinkUnderline.astro
@@ -19,7 +19,8 @@ const { link, href, underlinecolor, strokewidth } = Astro.props;
       </svg>
     </span>
   </a>
-  <style define:vars={{ underlinecolor, strokewidth }}>
+  <style onload="this.media='all'" define:vars={{ underlinecolor, strokewidth }}
+  >
     /*! CSS Used from: https://tympanus.net/Development/LineHoverStyles/css/base.css */
     .content__item .content__item::after,
     .content__item::before {
