--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -146,7 +146,7 @@ const atomFeed = "/atom.xml";
 
 <!-- Cloudflare Web Analytics -->
 <script
-  defer
+  is:raw
   src="https://static.cloudflareinsights.com/beacon.min.js"
   data-cf-beacon='{"token": "cbca560476c24c1e91d00c93a7f8501c"}'
 ></script><!-- End Cloudflare Web Analytics -->
