--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -135,14 +135,14 @@ const atomFeed = "/atom.xml";
 <!-- <script type='module' src='/sw.js'></script> -->
 <!-- SEO meta tags are now handled by the SEO component -->
 
-<script>
+<!-- <script>
   if ("serviceWorker" in navigator) {
     navigator.serviceWorker.register(
       import.meta.env.MODE === "production" ? "/sw.js" : "/dev-sw.js?dev-sw",
       { type: import.meta.env.MODE === "production" ? "classic" : "module" },
     );
   }
-</script>
+</script> -->
 
 <!-- Cloudflare Web Analytics -->
 <script
